# claude-mergetool

./: Cargo.toml  README.md  config.toml  flake.nix
.github/workflows/: ci.yaml  get-crate-version.sh  release.yaml  version.yaml
nix/overlays/: claude-mergetool.nix
nix/pkgs/: claude-mergetool.nix
src/: claude_json.rs  config.rs  install.rs  logging.rs  main.rs
tests/: integration.rs
