[package]
name = "claude-mergetool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
command-error = { version = "0.8.0", features = ["miette", "tracing"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1"
tracing = "0.1.44"

[dev-dependencies]
expect-test = "1.5.1"
