[package]
name = "claude-mergetool"
version = "1.0.0"
edition = "2024"
authors = ["Rebecca Turner <rbt@sent.as>"]
description = "AI-powered merge conflict resolution using Claude Code"
repository = "https://github.com/9999years/claude-mergetool"
license = "MIT"
keywords = ["git", "merge", "claude", "ai"]
categories = ["command-line-utilities"]

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
command-error = { version = "0.8.0", features = ["miette", "tracing"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1"
tracing = "0.1.44"

[dev-dependencies]
expect-test = "1.5.1"
