[package]
name = "claude-mergetool"
version = "1.2.0"
edition = "2024"
authors = ["Rebecca Turner <rbt@sent.as>"]
description = "AI-powered merge conflict resolution using Claude Code"
repository = "https://github.com/9999years/claude-mergetool"
license = "MIT"
keywords = ["git", "merge", "claude", "ai"]
categories = ["command-line-utilities"]

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
command-error = { version = "0.8.0", features = ["miette", "tracing"] }
dirs = "6"
humantime = "2.3.0"
jiff = "0.2"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
termimad = "0.34.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expect-test = "1.5.1"
tempfile = "3"
utf8-command = "1.0.1"
